# ProjectShapeFunction

./: .gitignore  BuildQuadMatrix.m  FindCoeffTriangle.m  GmshNodeListTriangle.m  NumOfQuadNodes.m  NumOfTriNodes.m  PlotQuadShapeFunc.m  PlotTraingleShapeFunc.m  PlotTriangleShapeFunc.m  README.md  cof.m
Cpp/: BuildTetrahedralMatrix.hpp  BuildTriangleMatrix.hpp  CMakeLists.txt  FindCoeffHexahedral.hpp  FindCoeffLine.hpp  FindCoeffQuad.hpp  FindCoeffTertrahedral.hpp  FindCoeffTriangle.hpp  GmshNodeListGen.h  NumOfTetraNodes.hpp  ShapeFunction.hpp  ShapeFunctionAllElementTypes.hpp  checksupportedorder.hpp  cof.hpp  main.cpp
Cpp/ShapeFunction/LagrangeShapeFunction/: CMakeLists.txt  cof.hpp
Cpp/libGmshReader/: libGmshReader.cpp  libGmshReader.h
octave/: BuildTriangleMatrix.m  FindCoeffQuad.m  GmshNodeListQuad.m  NumOfTetraNodes.m  PlotQuadShapeFunc.m  QuadNodeListByLevel.m  octave-workspace
